Fix header alignment on mobile

--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -74,6 +74,10 @@ header {
 
 	@media (max-width: (0.5 * @pageWidth)) {
 		text-align: center;
+		align-items: center;
+		.right {
+			text-align: center;
+		}
 	}
 }
 
